--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- <i class="fa-solid fa-heart"></i> -->
-
+    <h4>My World In Different Resolutions</h4>
     <div class="mt-5">
       <img src="" alt="" id="myImg" />
       <div class="">
